--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 }
 
 body {
-  margin: 0;
+  background-image: url("https://pbs.twimg.com/profile_images/853612004694609920/4W8yRDJA.jpg");
+    
+    margin: 0;
 }
 
 /* Style the top navigation bar */
