--- a/index.html
+++ b/index.html
@@ -1,65 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<title>CSS Template</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-* {
-    box-sizing: border-box;
+div.container {
+    width: 100%;
+    border: 1px solid gray;
 }
 
-body {
-  background-image: url("https://pbs.twimg.com/profile_images/853612004694609920/4W8yRDJA.jpg");
-    
-    margin: 0;
-}
-
-/* Style the top navigation bar */
-.topnav {
-    overflow: hidden;
-    background-color: #333;
-}
-
-/* Style the topnav links */
-.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
+header, footer {
+    padding: 1em;
+    color: white;
+    background-color: black;
+    clear: left;
     text-align: center;
-    padding: 14px 16px;
+}
+
+nav {
+    float: left;
+    max-width: 160px;
+    margin: 0;
+    padding: 1em;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+   
+nav ul a {
     text-decoration: none;
 }
 
-/* Change color on hover */
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
+article {
+    margin-left: 170px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
 }
-
-/* Style the content */
-.content {
-    background-color: #ddd;
-    padding: 10px;
-    }
- </style>
+</style>
 </head>
 <body>
+background-image: url("https://lymphomajourney.files.wordpress.com/2012/11/love-medicine.jpg");
+    
+<div class="container">
 
-<div class="topnav">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-</div>
+<header>
+   <h1>City Gallery</h1>
+</header>
+  
+<nav>
+  <ul>
+    <li><a href="#">London</a></li>
+    <li><a href="#">Paris</a></li>
+    <li><a href="#">Tokyo</a></li>
+  </ul>
+</nav>
 
-<div class="content">
-  <h2>CSS Template</h2>
-  <p>A topnav, content and a footer.</p>
-</div>
-    <div class="footer">
-  <p>Footer</p>
+<article>
+  <h1>London</h1>
+  <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+</article>
+
+<footer>Copyright &copy; W3Schools.com</footer>
+
 </div>
 
 </body>
 </html>
-   
