--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@ background-image: url("https://lymphomajourney.files.wordpress.com/2012/11/love-
 <div class="container">
 
 <header>
-   <h1>City Gallery</h1>
+   <h1>medicine</h1>
 </header>
   
 <nav>
   <ul>
-    <li><a href="#">London</a></li>
-    <li><a href="#">Paris</a></li>
-    <li><a href="#">Tokyo</a></li>
+    <li><a href="#">add</a></li>
+    <li><a href="#">add</a></li>
+    <li><a href="#">add</a></li>
   </ul>
 </nav>
 
@@ -62,7 +62,6 @@ background-image: url("https://lymphomajourney.files.wordpress.com/2012/11/love-
   <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
 </article>
 
-<footer>Copyright &copy; W3Schools.com</footer>
 
 </div>
 
