--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ background-image: url("https://lymphomajourney.files.wordpress.com/2012/11/love-
   
 <nav>
   <ul>
-    <li><a href="#">add</a></li>
+    <li><a href="https://kieranhak.github.io/forprojectwebsite1github.io/">illness</a></li>
     <li><a href="#">add</a></li>
     <li><a href="#">add</a></li>
   </ul>
