--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ background-image: url("https://lymphomajourney.files.wordpress.com/2012/11/love-
 </nav>
 
 <article>
-  <h1>London</h1>
-  <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  <h1>what this website will do</h1>
+  <p>this website will help you by telling u about your illness and what you should be doing.</p>
   <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
 </article>
 
