--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@ background-image: url("https://lymphomajourney.files.wordpress.com/2012/11/love-
   
 <nav>
   <ul>
-    <li><a href="https://kieranhak.github.io/forprojectwebsite1github.io/">illness</a></li>
-    <li><a href="#">add</a></li>
-    <li><a href="#">add</a></li>
+    <li><a href="https://kieranhak.github.io/forprojectwebsite1github.io/">illness1</a></li>
+    <li><a href="#">illness2</a></li>
+    <li><a href="#">illness3</a></li>
   </ul>
 </nav>
 
 <article>
   <h1>what this website will do</h1>
   <p>this website will help you by telling u about your illness and what you should be doing.</p>
-  <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  <p>you look for an illness it will tell you the simpims about it and what and how much medicine you should take</p>
 </article>
 
 
