--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ article {
 }
 </style>
 </head>
-<body>
+<body>  {
 background-image: url("https://lymphomajourney.files.wordpress.com/2012/11/love-medicine.jpg");
     
 <div class="container">
